[l10n] Updated Catalan (ca) translation.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5458 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -70,7 +70,7 @@ foxtrick.TeamPopupLinks.desc=Mostra una petita finestra desplegable amb enllaço
 foxtrick.TeamPopupLinksMore.desc=Mostra un enllaç «més…» al menú desplegable per veure més dreceres.
 foxtrick.StaffMarker.desc=Marca els àlies dels treballadors als fòrums i a les pàgines dels equips.
 foxtrick.StaffMarker.manager.desc=Ressalta els noms dels treballadors en la pàgina dels equips.
-foxtrick.StaffMarker.own.desc=Personal markers (format with own userids): userId=1000 userId=1001 style='color:yellow !important;' userId=1002 style='background-color:yellow;)
+foxtrick.StaffMarker.own.desc=Marques personal (format amb IDs d'usuari propi): userID=1000 userID=1001 style='color:yellow !important;' userId=1002 style='background-color:yellow;)
 foxtrick.StaffMarker.flag.desc=Afegeix la bandera als usuaris a la caixa de selecció
 foxtrick.ForumYouthIcons.desc=Mostra una barra d’enllaços pel planter (també funciona pel correu, notes de premsa, llibre de visites i els anuncis)
 foxtrick.ForumYouthIcons.q.desc=Afegeix icona per l'etiqueta de cita en cas de que hi falti
@@ -86,7 +86,7 @@ foxtrick.ForumYouthIcons.youth_match.desc=Afegeix icona de «YouthMatchID»
 foxtrick.ForumYouthIcons.youth_series.desc=Afegeix icona de «YouthSeriesID»
 foxtrick.ForumYouthIcons.enlarge_input.desc=Fes més grans els quadres de text per poder escriure millor
 foxtrick.ForumYouthIcons.pre.desc=Afegeix icona per format «pre»
-foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expresions (Mask  with additional , eg \\.).
+foxtrick.ForumYouthIcons.table.desc=Afegeix una icona de taula. Les etiquetes personalitzades permeten emprar expressions regulars (màscara amb extres, e.g.: \\.).
 foxtrick.FormatPostingText.desc=Substitueix les etiquetes HT-ML per etiquetes HTML (e.g.: element «pre»)
 foxtrick.CopyPostID.desc=Afegeix un enllaç per copiar el ID d'un missatge dels fòrums
 foxtrick.CopyPostID.AddCopyIcon.desc=Afegeix una icona per copiar la id de missatge abans de la primera id de missatge
@@ -147,7 +147,7 @@ foxtrick.ConfirmActions.StaffChange.desc=Al llogar/despatxar empleats
 foxtrick.HideManagerAvatarUserInfo.desc=Amaga la informació d’usuari sota els avatars
 foxtrick.PersonalityImages.desc=Afegeix números acolorits en la pàgina del jugador per la popularitat, caràcter i psicologia.
 foxtrick.HideSignatures.desc=Amaga les signatures en els missatges dels fòrums i, en el seu lloc, mostra un enllaç per veure la signatura.
-foxtrick.MarkUnread.desc=Adds a link to mark all postings unread from the actual one
+foxtrick.MarkUnread.desc=Afegeix un enllaç en el missatge actual per marcar tots els no llegits
 foxtrick.ForumNextAndPrevious.desc=Treu els botons «Següent» i «Anterior» dels fils del fòrums si no estan habilitats
 foxtrick.ForumLastPost.desc=Ves al darrer missatge en lloc d'anar al primer missatge dels fils llegits
 foxtrick.ForumLastPost.lastpage.desc=Ves a la darrera pàgina i no al darrer missatge
@@ -158,7 +158,7 @@ foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Separa els colors de l'equ
 foxtrick.ForumRedirManagerToTeam.desc=Canvia els enllaços a la pàgina de l’usuari per la de l’equip en els enllaços dels fòrums
 foxtrick.ManagerButtons.desc=Afegeix o canvia els botons de la pàgina de l'usuari i de l'equip
 foxtrick.ManagerButtons.GuestBook.desc=Afegeix l’enllaç «Escriu al llibre de visites» a la pàgina de l’usuari i de l'equip
-foxtrick.ManagerButtons.LargeSendMail.desc=Open the large mailbox instead of the small one
+foxtrick.ManagerButtons.LargeSendMail.desc=Obre la bústia de missatges gran en lloc de la petitama
 foxtrick.HTThreadMarker.desc=Marca els fils creats pels HTs
 foxtrick.TeamStats.desc=Crea una vista prèvia dels jugadors de l'equip.
 foxtrick.TeamStats.General.desc=Informació general (TSI/edat)
@@ -197,7 +197,7 @@ foxtrick.FixcssProblems.Page_Minimum_Height.desc=Fixa el salt de pàgina quan no
 foxtrick.FixcssProblems.MatchOrder_Lineheight.desc=Soluciona el problema de les caixes de selecció desplaçades a la pàgina de l'alineació
 foxtrick.FixcssProblems.RTL_Fixes.desc=Soluciona alguns errors de HT en idiomes que s'escriuen de dreta a esquerra
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Afegeix una barra de desplaçament als fòrums. Fa menys pampallugues que la de l'opció de HT
-foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Increase font size for HT 'small font' format.
+foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Augmenta la mida de la lletra de les lletres petites «small font» de HT.
 foxtrick.SimplePresentation.desc=Opcions addicionals de presentació
 foxtrick.SimplePresentation.League_Table.desc=Afegeix línies verticals a la taula de la lliga per facilitar la lectura
 foxtrick.SimplePresentation.Guestbook.desc=Augmenta la llegibilitat del llibre de visites (alinea els missatges amb un fons gris)
@@ -211,9 +211,9 @@ foxtrick.ForumPresentation.HideFlagsInForumHeader.desc=Treu les banderes dels us
 foxtrick.ForumPresentation.HideLeagueInForumHeader.desc=Treu la lliga de l'usuari a les capçaleres dels missatges dels fòrums
 foxtrick.ForumPresentation.Forum_Spoiler_reveal.desc=Mostra sempre el contingut de les filtracions «spoilers»
 foxtrick.ForumPresentation.hideForumNotificationBox.desc=Amaga la caixa de notificació dels fòrums referent als missatges previs no llegits dins del fil.
-foxtrick.ForumPresentation.Forum_NewPostsInBracket.desc=Display number of new postings in brackets behind the posting count
-foxtrick.ForumPresentation.Forum_Link_Grey_Icons.desc=Display icons instead of text links in forum footer
-foxtrick.ForumPresentation.moved_avatarinfo_fix.desc=Fixes wrongly placed avatar info if the posting header gets too full
+foxtrick.ForumPresentation.Forum_NewPostsInBracket.desc=Mostra el nombre de missatges nous entre parèntesis darrera del comptador de missatges
+foxtrick.ForumPresentation.Forum_Link_Grey_Icons.desc=Mostra una icona en lloc d'enllaços de text en el peu del fòrum
+foxtrick.ForumPresentation.moved_avatarinfo_fix.desc=Fixa la posició errònia de la informació dels avatars quan la capçalera dels missatges dels fòrums està massa plena
 foxtrick.HeaderFix.RemoveFlicker.desc=Treu les pampallugues al emprar «Headerfix» amb Firefox 3.5
 foxtrick.SkinPlugin.desc=Afegeix la vostra aparença CSS a hattrick
 foxtrick.SkinPlugin.Skin1.desc=Activa l'aparença 1 (enllaç d'estil)
@@ -237,9 +237,9 @@ foxtrick.ExtraShortcuts.Supporterstats.desc=Enllaç a les estadístiques de supp
 foxtrick.ExtraShortcuts.Transfers.desc=Enllaç a la pàgina de transferències del vostre equip
 foxtrick.ExtraShortcuts.Prefs.desc=Enllaç a la pàgina de preferències
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Enllaç a la pàgina de preferències de FoxTrick
-foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Link to Hattrick Radio (Belgium/Netherlands) (Winamp)
-foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Link to Hattrick Radio (Belgium/Netherlands) (Windows Media Player)
-foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Link to Radio downtime (DACHL) (Winamp)
+foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Enllaç a Ràdio Hattrick (Bèlgica/Holanda) (Winamp)
+foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Enllaç a Ràdio Hattrick (Bèlgica/Holanda) (Windows Media Player)
+foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Enllaç a Ràdio downtime (DACHL) (Winamp)
 foxtrick.CopyMatchID.desc=Copia la Id del partit al fer clic en la icona de lliga/copa/amistós a les pàgines dels partits o a la de l'arxiu de partits. Als supporters també els hi funciona a la pàgina «cara a cara». (Les pestanyes «últims partits i «història»)
 foxtrick.HeaderFix.desc=Arregla la capçalera al desplaçar «scrolling» (afectarà a altres pàgines i no només a HT)
 foxtrick.HeaderFix.FixLeft.desc=També soluciona el problema del sub-menú quan es mou la barra de desplaçament
@@ -247,7 +247,7 @@ foxtrick.CopyRatings.desc=Afegeix enllaços a la taula de ratis dels partits per
 foxtrick.GoaldifferenceToTables.desc=Afegeix una nova columna amb la diferència de gols a la taula de promoció i a la d'història del grup
 foxtrick.CrossTable.desc=Afegeix una nova taula pels encreuaments, on tots els partits de lliga es mostren incloent una gràfica lineal de la posició a la lliga
 foxtrick.ElectionTable.desc=Afegeix el percentatge a la taula de les eleccions (només els vots mostrats es compten, no tots)
-foxtrick.ContextMenuCopy.desc=Options at the context menu for copying ID and/or link and content in HT-ML
+foxtrick.ContextMenuCopy.desc=Opcions del menú contextual per copiar ID i/o enllaç al contingut en HT-ML
 foxtrick.ContextMenuCopy.Id.desc=Opció per copiar IDs
 foxtrick.ContextMenuCopy.Link.desc=Opció per copiar enllaços en format HT-ML
 foxtrick.ContextMenuCopy.HtMl.desc=Opció per copiar textos seleccionat en format HT-ML
@@ -271,7 +271,7 @@ foxtrick.LeagueNewsFilter.friendlies.desc=Mostra només els amistosos internacio
 foxtrick.LeagueNewsFilter.transfers.desc=Mostra només les transferències
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Mostra només els canvis de la alineació
 foxtrick.LeagueNewsFilter.PAs.desc=Mostra només notes de premsa
-foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Hightlight teams which changed or set line-up recently in next round table
+foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Remarca els equips en la taula de partits que han canviat o modificat l'alineació recentment
 foxtrick.LeagueNewsFilter.highlight_wins.desc=Marca els equips guanyadors a la taula de l'última jornada
 foxtrick.LeagueNewsFilter.gray_bots.desc=Els equips «bot» i sense propietari en gris a les pàgines de la lliga
 foxtrick.ShortPAs.desc=Mostra només les capçaleres expandibles de les notes de premsa
@@ -331,10 +331,10 @@ foxtrick.CrossTable.TableHeader.desc=Taula d'encreuaments de lliga
 foxtrick.YouthSkillHideUnknown.desc=Més espai per la pàgina de jugadors del planter
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Amaga les habilitats del planter a la pàgina dels jugadors del planter quan aquestes no es coneguin
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Amaga la clau 'màxima' per tenir més espai, sobre tot si s'han habilitat les fotos dels jugadors
-foxtrick.SkillTable.desc=Show skills of players as a table. Suggest module "ExtraPlayerInfo" for showing extra information.
+foxtrick.SkillTable.desc=Mostra les habilitats dels jugadors con una taula. Es suggereix el modul «ExtraPlayerInfo» per mostrar informació extra.
 foxtrick.SkillTable.OtherTeams.desc=Habilita per altres equips
 foxtrick.HighlightCupwins.desc=Marca els equips guanyadors a la pàgina dels partits de copa
-foxtrick.HighlightCupwins.HighlightCupsets.desc=Highlight cupsets (matches won by the team of lower ranking)
+foxtrick.HighlightCupwins.HighlightCupsets.desc=Remarca les sorpreses (partits guanyats per l'equip de menor classificació)
 foxtrick.SkillTranslation.desc=Afegeix la denominació anglesa de l'habilitat a les pàgines d'ajuda i denominacions
 foxtrick.ReadHtPrefs.desc=Detecta el idioma automàticament
 foxtrick.ReadHtCountryCurrencyDateFormat.desc=Detecta el país, la moneda i el format de data automàticament
@@ -362,12 +362,12 @@ foxtrick.RapidId.desc=Una caixa d'entrada a dalt de la pàgina útil per veure u
 foxtrick.ReadHtPrefsFromHeader.desc=Fixa automàticament els ajustaments de FoxTrick
 foxtrick.ReadHtPrefsFromHeader.Language.desc=Configura l'idioma
 foxtrick.ReadHtPrefsFromHeader.CountryCurrencyDateFormat.desc=Ajusta el país, la data i la moneda
-foxtrick.YouthSeriesEstimation.desc=In search result table, estimates the start time of youth series that are in season break.
-foxtrick.LocalTime.desc=Show optional local time instead of Hattrick time. Clicking on the clock switches between the two options
+foxtrick.YouthSeriesEstimation.desc=En la taula de resultats de la cerca, calcula l'inici de la lliga juvenil que estan en l'aturada entre temporades.
+foxtrick.LocalTime.desc=Mostra l'hora local en lloc de la de Hattrick. Si feu clic al rellotge aquest canviarà entre les dues opcions
 foxtrick.LocalTime.DefaultLocal.desc=Mostra l'hora local per omissió
-foxtrick.ForumThreadAutoIgnore.desc=Automatically ignore forum topics with selected tags (topics with [Tag] or {Tag}).
-foxtrick.ForumThreadAutoIgnore.Tags.desc=List of tags, eg: NT, idea, Bug. Comma separated, case insensitive.
-foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by IDs (the part before the dot). Threads in whitelist will not be ignored. Comma separated.
+foxtrick.ForumThreadAutoIgnore.desc=Ignora de manera automàtica els fils que en l'assumpte tinguin les etiquetes seleccionades (assumptes amb [etiqueta] o {etiqueta}).
+foxtrick.ForumThreadAutoIgnore.Tags.desc=Llista de etiquetes, e.g.: NT, idea, Bug. Separats per coma i distingeix entre minúscules i majúscules.
+foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Fils permesos explícitament per IDs (la part anterior al punt). Fils permesos explícitament no s'ignoraran. Separats per comes.
 foxtrick.TableSort.desc=Fa que totes les taules correctes i que tinguin capçalera es puguin ordenar (incloent aquelles dels missatges dels fòrums)
 
 # -----------------------------------------------------------------------------
