locale/zh: fixed two typos.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5467 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/zh/foxtrick.properties
+++ b/content/locale/zh/foxtrick.properties
@@ -845,8 +845,8 @@ foxtrick.LeagueAndMatchChat.FederationChat=非 HT 联盟聊天
 
 
 # htms
-foxtrick.htmsStatistics.prediction.desc=预测结果
-foxtrick.htmsStatistics.windrawloss.desc=胜/平/负
+foxtrick.htmsStatistics.prediction=预测结果
+foxtrick.htmsStatistics.windrawloss=胜/平/负
 foxtrick.htmsStatistics.linkcaption=HTMS 提供的比赛分析
 foxtrick.htmsStatistics.changePrediction=改变预测
 
