--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -82,7 +82,7 @@ foxtrick.FormatPostingText.desc=Korvaa FoxTrick HT-ML-Tagit HTML-Tageihin (i.E. 
 foxtrick.CopyPostID.desc=ViestiId muutokset. Helpottaa foorumissa, kun haluat nopeasti kopioida ViestiIDn.
 foxtrick.CopyPostID.AddCopyIcon.desc=Lisää ikoni ViestiIDn kopioimista varten (Foorumissa viestinumeron vieressä)
 foxtrick.CopyPosting.desc=Lisää ikoni viestin kopioimista varten sisältäen referenssit
-foxtrick.ShowForumPrefButton.desc=Näyttää oikopolun foorumiasetuksiin jokaisella Foorumin sivulla
+foxtrick.ShowForumPrefButton.desc=Linkki foorumiasetuksiin foorumin sivuilla
 foxtrick.AlltidFlags.desc=Lisää Alltid-liput ja molempien postereiden linkit foorumissa
 foxtrick.AlltidFlags.LinkFlagToLeague.desc=Linkitä ensin Hattrickin sarjasivulle, jos (piilotettu) manageri-avatar on päällä
 foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Linkitä ensin Alltidin sarjasivulle
@@ -209,15 +209,6 @@ foxtrick.SkinPlugin.Skin2.desc=Aktivoi skini 2 (linkki tyyli)
 foxtrick.CurrencyConverter.desc=Muuntaa HT valuutan
 foxtrick.MovePlayerStatement.desc=Siirtää pelaajan puheen eli lausunnon pelaajakuvaan. Jos kuvat on estetty, lausunnot poistetaan.
 foxtrick.TickerColoring.desc=Tickerin eli uutiskirjoittimen värjääminen erilaisien tapahtumien mukaan eri väreillä.
-foxtrick.TickerColoring.LoginWelcome.desc=LoginWelcome -väritys
-foxtrick.TickerColoring.LoginSupporters.desc=LoginSupporters -väritys
-foxtrick.TickerColoring.ForumReplyToMe.desc=ForumReplyToMe -väritys
-foxtrick.TickerColoring.TransferMarket.desc=TransferMarket -väritys
-foxtrick.TickerColoring.Challenges.desc=Challenges -väritys
-foxtrick.TickerColoring.Guestbook.desc=Guestbook -väritys
-foxtrick.TickerColoring.MailToMe.desc=MailToMe -väritys
-foxtrick.TickerColoring.MyHTMessages.desc=MyHT Messages -väritys
-foxtrick.TickerColoring.Hover.desc=Hover -väritys
 foxtrick.ExtraShortcuts.desc=Lisää oikopolkuja etusivun pääikoneihin
 foxtrick.ExtraShortcuts.AddLeft.desc=Ruksi lisääksesi ikonit vasemmalle, ruksittamatta ikonit siirtyvät oikealle puolelle.
 foxtrick.ExtraShortcuts.AddSpace.desc=Kasvata tilaa oikopolku-ikoneille
@@ -273,8 +264,6 @@ foxtrick.HighlightCupwins.desc=Korostaa ottelun voittaneet joukkueet Cup Ottelut
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Korosta tulos, jos ottelun voittaa joukkue jolla on matalampi ranking
 foxtrick.SkillTranslation.desc=Lisää englannin kielen sanalliset arvot taitoihin jne. ohje/arvot -sivulle
 foxtrick.ReadHtPrefs.desc=Vaihda kieli automaattisesti vastaamaan samaa kieltä HT-kielen kanssa, aina kun vaihdan kieltä HT-asetuksista.
-foxtrick.ReadHtCountryCurrencyDateFormat.desc=Tunnista maa, valuutta ja päivämäärän muoto automaattisesti (päivitetty esim. kirjautumisen jälkeen)
-foxtrick.CurrentHtCountryCurrencyDateFormat.desc=Viimeksi huomatut arvot:
 foxtrick.OnPagePrefs.desc=Näyttää asetuslaatikon oikean tai vasemmanpuoleisen sivupalkin pohjalla, joka mahdollistaa kyseisiä sivuja koskevien Foxtrick moduulien hylkäämisen/aktivoimisen.
 foxtrick.CountryList.desc=Muokkauksia maiden nimille
 foxtrick.CountryList.SelectBoxes.desc=Korvaa englanninkieliset maiden nimet niiden alkuperäisillä nimillä pudotusvalikoissa
@@ -297,9 +286,6 @@ foxtrick.LeagueAndMatchChat.OpenYapletFrame.desc=Avaa Yaplet chat Hattrick -sivu
 foxtrick.LeagueAndMatchChat.OpenGabblyPopup.desc=Avaa Gabbly chat uudessa ikkunassa
 foxtrick.LeagueAndMatchChat.ChatNick.desc=Valitse Chat -nimimerkkisi
 foxtrick.RapidId.desc=Lisää kätevä syötelaatikko sivun yläpuolelle katsellaksesi joukkuetta, pelaajaa, jne. ID:llä
-foxtrick.ReadHtPrefsFromHeader.desc=Säädä asetukset automaattisesti Foxtrickille
-foxtrick.ReadHtPrefsFromHeader.Language.desc=Aseta kieli
-foxtrick.ReadHtPrefsFromHeader.CountryCurrencyDateFormat.desc=Aseta maa, päivämäärä ja valuutta
 foxtrick.YouthSeriesEstimation.desc=Tuloshaun taulussa, arvioi sarjatauolla olevien juniorisarjojen otteluiden aloitusajan.
 foxtrick.LocalTime.desc=Näytä valinnainen paikallinen aika HT-ajan sijaan. Voit vaihtaa aikaa näiden kahden valinnan välillä klikkaamalla kelloa.
 foxtrick.LocalTime.DefaultLocal.desc=Näytä paikallinen aika oletuksena
@@ -387,6 +373,8 @@ foxtrick.GoToPostBox.label=mene
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Klikkaa 'Tallenna' nappia seuraavalla sivulla, jättääksesi tämän foorumin.
 leave_conf_button=Jätä foorumi
+
+forum.preferences=Foorumiasetukset
 
 # ForumTemplates
 make_template_from_post=Tallenna viesti
