Farsi language file update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5503 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -1,7 +1,7 @@
 # Farsi language file
 # utf-8 encoded Farsi
 # By Slash-ss (1950911) & MohammadSS(9956242)
-# r5480
+# 
 # Hints:
 # translate the right side of the = sign.
 # don't use " in your translations.
@@ -212,38 +212,29 @@ foxtrick.ForumPresentation.Forum_NewPostsInBracket.desc=نشان دادن تعد
 foxtrick.ForumPresentation.Forum_Link_Grey_Icons.desc=نمايش ايکن به جاي لينکها در انجمن
 foxtrick.ForumPresentation.moved_avatarinfo_fix.desc=درست کردن محل قرار گيري اطلاعات اواتار
 foxtrick.HeaderFix.RemoveFlicker.desc=حذف لرزش انجمنها برای کسانی که از فایرفاکس 3.5 استفاده میکنند
-foxtrick.SkinPlugin.desc=اضافه کردن اسکینهای خودتان
+foxtrick.SkinPlugin.desc=اضافه کردن اسکینهای خودتان 
 foxtrick.SkinPlugin.Skin1.desc=اسکین فعال 1 (link style)
 foxtrick.SkinPlugin.Skin2.desc=اسکین فعال 2(link style)
 foxtrick.CurrencyConverter.desc=تبدیل واحد پول هتریک
 foxtrick.MovePlayerStatement.desc=انتقال وضعیت بازیکن به عکس بازیکن . اگر عکس غیر فعال باشد وضعیت خذف میشود
-foxtrick.TickerColoring.desc=The different events displayed in the news ticker will be coloured.
-foxtrick.TickerColoring.LoginWelcome.desc=رنگ دلخواه برای خوش امد گویی هنگام ورود
-foxtrick.TickerColoring.LoginSupporters.desc=رنگ دلخواه برای ورود تیمهایی که از انها حمایت میکنید
-foxtrick.TickerColoring.ForumReplyToMe.desc=رنگ دلخواه برای پیام های انجمن
-foxtrick.TickerColoring.TransferMarket.desc=رنگ دلخواه برای بازار نقل و انتقالات
-foxtrick.TickerColoring.Challenges.desc=رنگ دلخواه برای چلنج
-foxtrick.TickerColoring.Guestbook.desc=رنگ دلخواه برای مهمان نامه
-foxtrick.TickerColoring.MailToMe.desc=رنگ دلخواه برای پیام خصوصی
-foxtrick.TickerColoring.MyHTMessages.desc=رنگ دلخواه برای هتریک من
-foxtrick.TickerColoring.Hover.desc=رنگ دلخواه برای نشانگر موس
-foxtrick.ExtraShortcuts.desc=اضافه کردن ميانبر به ميابنرهاي اصلي
-foxtrick.ExtraShortcuts.AddLeft.desc=علامت بزنيد براي اضافه کردن ايکن به سمت چپ و براي اضافه کردن به سمت راست علامت نزنيد
-foxtrick.ExtraShortcuts.AddSpace.desc=زياد کردن فضا براي ايکن هاي ميان بر
-foxtrick.ExtraShortcuts.Supporterstats.desc=لينک به ساپوتر ها
-foxtrick.ExtraShortcuts.Transfers.desc=لينک به نقل و انتقالات تيم خودتان
-foxtrick.ExtraShortcuts.Prefs.desc=لينک به صفحه تنظيمات
-foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=لينک به صفحه تنظيمات فاکس تريک
-foxtrick.ExtraShortcuts.HtRadioWinamp.desc=لينک به راديو هتريک (Belgium/Netherlands) (Winamp)
-foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=لينک به راديو هتريک (Belgium/Netherlands) (Windows Media Player)
-foxtrick.ExtraShortcuts.DTRadioWinamp.desc=لينک به راديو (DACHL) (Winamp)
-foxtrick.CopyMatchID.desc=کپي کردن شماره شناسايي بازي هتگام کليک بر روي ايکن بازي..
-foxtrick.HeaderFix.desc=Fixes the Header while scrolling (affects also on other pages of HT)
-foxtrick.HeaderFix.FixLeft.desc=Also fixes the submenu while scrolling
+foxtrick.TickerColoring.desc=نشان دادن وقایع جدید با رنگهای مختلف
+foxtrick.ExtraShortcuts.desc=اضافه کردن میان بر به میان بر اصلی
+foxtrick.ExtraShortcuts.AddLeft.desc=در صورت تیک زدن ایکنها را در سمت چپ نشان میدهد
+foxtrick.ExtraShortcuts.AddSpace.desc=اضافه  کردن فضا برای ایکنهای میان بر
+foxtrick.ExtraShortcuts.Supporterstats.desc=لینک به وضعیت ساپورتر
+foxtrick.ExtraShortcuts.Transfers.desc=لینک به صفحه نقل و انتقالات تیم خودتان
+foxtrick.ExtraShortcuts.Prefs.desc=لینک به صفحه تنظیمات
+foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=لینک به صفحه تنظیمات فاکس تریک
+foxtrick.ExtraShortcuts.HtRadioWinamp.desc=لینک به رادیو هتریک (Belgium/Netherlands) (Winamp)
+foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=لینک به رادیو هتریک (Belgium/Netherlands) (Windows Media Player)
+foxtrick.ExtraShortcuts.DTRadioWinamp.desc=لینک به رادیو downtime (DACHL) (Winamp)
+foxtrick.CopyMatchID.desc=کپی کردن شماره شناسایی مسابقه هنگامی که بر روی ایکن ان کلیک می کنید
+foxtrick.HeaderFix.desc=درست کردن سرصفحه هنگامی که صفحه را اسکرول میکنید(affects also on other pages of HT)
+foxtrick.HeaderFix.FixLeft.desc=همچنین درست کردن منو اصلی هنگام اسکرول کردن
 foxtrick.CopyRatings.desc=اضافه کردن لينک به جدول ريتينگ در صفحه مسابقات براي کپي کردن ريت(in HT-ML)
 foxtrick.GoaldifferenceToTables.desc=اضافه کردن يک جدول جديد براي تفاضل گل در صفحه صعود/سقوط
-foxtrick.CrossTable.desc=Adds an extra table to Fixtures, where all results on league matches are presented including line graph of league postitions
-foxtrick.ElectionTable.desc=اضافه کردن درصد به صفحه انتخابات (only displayed votes are counted, not all)
+foxtrick.CrossTable.desc=اضافه کردن یک جدول اضافی به صفحه ای که جدول لیگ به همراه نمودار در ان قرار دارد
+foxtrick.ElectionTable.desc=اضافه کردن درصد به صفحه انتخابات (فقط رای های شمرده شده را نشان میدهد )
 foxtrick.ContextMenuCopy.desc=تنظيمات براي کپي شماره شناسايي و... in HT-ML
 foxtrick.ContextMenuCopy.Id.desc=تنظيمات براي کپي شماره شناسايي
 foxtrick.ContextMenuCopy.Link.desc=تنظيمات براي کپي محل لينک HT-ML
@@ -334,8 +325,8 @@ foxtrick.HighlightCupwins.desc=هايلايت کردن تيم برنده در ص
 foxtrick.HighlightCupwins.HighlightCupsets.desc=هايلايت بازيهاي غير منتظره (بازيهايي که تيمي با ريت پايين تر برنده ميشود)
 foxtrick.SkillTranslation.desc=اضافه کردن نام انگليسي مهارتها در صفحه راهنما
 foxtrick.ReadHtPrefs.desc=عوض کردن اتوماتيک زبان وقتي شما زبان هتريک خود را تغيير ميدهيد
-foxtrick.OnPagePrefs.desc=Show a box in the sidebar for preferences of modules running on the current page.
-foxtrick.CountryList.desc=Modifications for country names
+foxtrick.OnPagePrefs.desc=اضافه کردن یک جعبه برای تنظیمات هر صفحه
+foxtrick.CountryList.desc=تغییر شکل دادن اسم کشورها
 foxtrick.CountryList.SelectBoxes.desc=جایگزین کردن نام انگلیسی کشورها به جای نام اصلی انها
 foxtrick.CountryList.TeamPage.desc=Displays a textlink to the league before the region and series on team page
 foxtrick.CountryList.ManagerPage.desc=نشان دادن لينک متني به ليگ قبل از زبان در صفحه مدير تيم
@@ -403,7 +394,7 @@ foxtrick.TeamStats.Cards.label=کارتها
 foxtrick.TeamStats.Injured.label=مصدوميت
 foxtrick.TeamStats.TransferListed.label=ليست نقل و انتقالات
 foxtrick.TeamStats.Pictures.label=چهره
-foxtrick.TeamStats.PlayedLatest.label=در بازی اخر بازی کرده
+foxtrick.TeamStats.PlayedLatest.label=در بازی اخر بازی کرده 
 foxtrick.TeamStats.NotPlayedLatest.label=در بازی اخر بازی نکرده
 
 #season stats
@@ -441,7 +432,7 @@ foxtrick.GoToPostBox.label=برو !
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=براي ترک اين انجمن بر روي "ذخيره" در صفحه بعد کليک کنيد
 leave_conf_button=ترک انجمن
-forum.preferences=Forum Preferences
+forum.preferences=تنظیمات انجمن ها
 
 # ForumTemplates
 make_template_from_post=الگو گرفتن از اين پست
@@ -669,22 +660,22 @@ foxtrick.defensiveTrainer=يک تمرين‌دهنده‌ي % که تفکرات 
 foxtrick.offensiveTrainer=يک تمرين‌دهنده‌ي % که تفکرات تهاجمي دارد
 foxtrick.balancedTrainer=يک تمرين‌دهنده‌ي % که تفکرات عادي دارد
 
-foxtrick. On-page Prefs
+foxtrick.onpagepreferences=تنظیمات فاکس تریک در این صفحه
 foxtrick.modules_allpages=استاندارد هر صفحه
 HTLanguageChanged=شما انتخاب کرديد زبان پيش فرض فاکس تريک را.محل زبان مورد نظر شما :
 NewOrChangedModules=اينها جديد هستند يا تغيير کرده اند
 Screenshot=عکس هاي گرفته شده از امکانات جديد
-PreferenceScreenshot=Commented screenshot of resp. FoxTrick's preferences
-FoxtrickFirstRunScreenshotList=Complete list of commented screenshots (English):
-FoxtrickChangeLogHint=موس را روي '!' قرار دهيد تا اخرين تغييرات را ببنيد (English).
-FoxtrickFirstRunSetChanged=Set preferences of new features now
+PreferenceScreenshot=عسکهای گرفته شده . تنظیمات فاکس تریک
+FoxtrickFirstRunScreenshotList=لیست کامل عکسها (انگلیسی):
+FoxtrickChangeLogHint=موس را روي '!' قرار دهيد تا اخرين تغييرات را ببنيد (انگلیسی).
+FoxtrickFirstRunSetChanged=تنظیمات امکانات جدید را همین الان انجام دهید
 # NOTE TO TRANSLATORS
 # You can use the following string to link to release notes in your language. The link better be generic, as you might not translate before actual release, i.e. link should be valid for all releases
-FoxtrickFirstRunReleaseNotes=Release notes (English):
+FoxtrickFirstRunReleaseNotes=یادداشت ازاد (انگلیسی):
 FoxtrickFirstRunReleaseNotesLink=http://www.ht-foxtrick.com/forum/viewforum.php?f=7
 # NOTE TO TRANSLATORS
 # You can use the following string to link to a topic on Hattrick Forum in your language. In that case translate the string and replace 'languages' with your own language and add relative path to the forum topic in your national forum (go to your forum topic and copy link without 'http://www**.hattrick.org')
-FoxtrickFirstRunHelpPage=FoxTrick Help forum (English, German, Spanish, Italian):
+FoxtrickFirstRunHelpPage=کمک فاکس تریک به انجمن (English, German, Spanish, Italian):
 FoxtrickFirstRunHelpPageLink=/Forum/Read.aspx?t=13254684
 
 StyleTutorial.title=استایل فاکس تریک
@@ -891,13 +882,13 @@ foxtrick.prefs.captionCleanupBranch=تنظیمات ذخیره شده
 foxtrick.prefs.captionLoadSavePrefs=ورود و صدور تنظیمات
 foxtrick.prefs.captionCurrencySymbolTo=تبدیل واحد پول فعلی به
 foxtrick.prefs.captionCurrencyConverter=تبدیلگر واحد پول
-foxtrick.prefs.statusbarpref=نشان دادن ایکن فاکس تریک در نوار وضعیت (requires restart)
-foxtrick.prefs.labelCleanupBranch=بازگشت به تنظیمات پیشفرض (Only preferences, no personal settings. Requires restart.)
+foxtrick.prefs.statusbarpref=نشان دادن ایکن فاکس تریک در نوار وضعیت (برای اعمال نیاز به راه اندازی مجدد دارد)
+foxtrick.prefs.labelCleanupBranch=بازگشت به تنظیمات پیشفرض (فقط تنظیمات نه تنظیمات شخصی برای اعمال نیاز به راه اندازی مجدد دارد.)
 foxtrick.prefs.labelDisableAll=غیر فعال کردن تمام بخش ها
 foxtrick.prefs.labelSavePrefs=صدور تنظیمات شخصی
 foxtrick.prefs.labelSavePrefs_Prefs=تنظیمات
-foxtrick.prefs.labelSavePrefs_Notes=تنظیمات شخصی(Notes, templates & custom links)
-foxtrick.prefs.labelLoadPrefs=صدور تنظیمات (Current preferences may be overwritten. Requires restart.)
+foxtrick.prefs.labelSavePrefs_Notes=تنظیمات شخصی(یادداشتها الگوها و لینک های اضافه)
+foxtrick.prefs.labelLoadPrefs=صدور تنظیمات (تنظیمات فعلی ممکن است بازنویسی شوند برای اعمال نیاز به راه اندازی مجدد دارد.)
 foxtrick.prefs.captionDisableSettings=غیر فعال کردن فاکس تریک
 foxtrick.prefs.stagepref=غیر فعال کردن در سرور استیج
 foxtrick.prefs.disableTemporaryLabel=غیر فعال کردن موقت
