Serbian translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5524 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -910,6 +910,7 @@ foxtrick.prefs.captionFoxtrickFirstRun=Фокстрик - Mој Хеттрик
 foxtrick.prefs.labelFoxtrickFirstRun=Одаберите верзију за коју желите да поново да видите шта је све у њој промењено од опција у односу на претходну верзију.
 foxtrick.prefs.stagepref=Искључи Фокстрик на Стејџ серверу
 foxtrick.prefs.disableTemporaryLabel=Привремено искључи Фокстрик
+foxtrick.prefs.saved=Подешавања су сачувана!
 
 foxtrick.prefs.buttonSave=Сачувај
 foxtrick.prefs.buttonCancel=Одустани
@@ -920,6 +921,11 @@ foxtrick.prefs.buttonDisableAll=Искључи све
 foxtrick.prefs.buttonSavePrefs=Извези
 foxtrick.prefs.buttonLoadPrefs=Увези
 foxtrick.prefs.activeCurrencyConverter=Активираj конвертор валуте
+about.headDevelopers=Главни девелопери
+about.projectOwners=Власници лиценце
+about.developers=Девелопери
+about.translators=Преводиоци
+about.designers=Дизајнери
 
 disable_all_foxtrick_modules_ask=Заиста желите да искључите све Фокстрик модуле?\n
 delete_foxtrick_branches_ask=Да ли сте сигурни да желите да обришете сва подешавања?\nМорате рестартовати Фајерфокс после брисања!
