Romanian language update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5527 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -84,7 +84,7 @@ foxtrick.FormatPostingText.desc=Inlocuieste tagurile Foxtrick HT-ML cu taguri HT
 foxtrick.CopyPostID.desc=Copiaza Id-ul postului in clipboard in loc sa-l afiseze pe forum
 foxtrick.CopyPostID.AddCopyIcon.desc=Adauga o iconita 'Copiaza Id-ul postului' inainte primului postID
 foxtrick.CopyPosting.desc=Adauga o iconita pentru a copia mesajul si referintele inclusiv
-foxtrick.ShowForumPrefButton.desc=Arata scurtatura catre setarile forumului pe toate paginile forum
+foxtrick.ShowForumPrefButton.desc=Link catre setarile forumului pe toate paginile forum
 foxtrick.AlltidFlags.desc=Adauga steaguri si link-uri Alltid userilor in antetul mesajelor
 foxtrick.AlltidFlags.LinkFlagToLeague.desc=Adauga o legatura catre pagina seriei, daca avatarul managerului este prezent
 foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Adauga o legatura catre pagina seriei in Alltid
@@ -216,15 +216,6 @@ foxtrick.SkinPlugin.Skin2.desc=Activeaza skin-ul 2 (stil link)
 foxtrick.CurrencyConverter.desc=Conversie valutara HT
 foxtrick.MovePlayerStatement.desc=Muta declaratia jucatorului la fata jucatorului. Daca fetele sunt dezactivate, declaratiile vor fi inlaturate
 foxtrick.TickerColoring.desc=Diferitele evenimente afisate in Tickerul de stiri sunt colorate.
-foxtrick.TickerColoring.LoginWelcome.desc=Culoare personalizata in Ticker atunci cand te loghezi pe site
-foxtrick.TickerColoring.LoginSupporters.desc=Culoare personalizata in Ticker atunci cand se logheaza sustinatorii tai
-foxtrick.TickerColoring.ForumReplyToMe.desc=Culoare personalizata in Ticker pentru reply-uri in Forum
-foxtrick.TickerColoring.TransferMarket.desc=Culoare personalizate in Ticker pentru transferuri
-foxtrick.TickerColoring.Challenges.desc=Culoare personalizata in Ticker pentru provocari noi
-foxtrick.TickerColoring.Guestbook.desc=Culoare personalizata in Ticker pentru mesaje noi in Cartea de Oaspeti
-foxtrick.TickerColoring.MailToMe.desc=Culoare personalizata in Ticker pentru HT-mail
-foxtrick.TickerColoring.MyHTMessages.desc=Culoare personalizata pentru mesajele MyHT
-foxtrick.TickerColoring.Hover.desc=Culoare personalizata in Ticker pentru mesaje legate de oprirea sitului
 foxtrick.ExtraShortcuts.desc=Adauga scurtaturi la scurtaturile principale (sus dreapta)
 foxtrick.ExtraShortcuts.AddLeft.desc=Bifeaza sa le asezi in stanga, debifeaza pentru dreapta
 foxtrick.ExtraShortcuts.AddSpace.desc=Mareste spatiul pentru iconitele scurtatura
@@ -331,8 +322,7 @@ foxtrick.SkillTable.OtherTeams.desc=Activeaza si pentru alte echipe
 foxtrick.HighlightCupwins.desc=Evidentiaza echipele castigatoare in meciurile din cupa pe pagina meciurilor de cupa
 foxtrick.HighlightCupwins.highlight_outsider.desc=Evidentiaza meciurile castiga de echipe cu rank mai mic
 foxtrick.SkillTranslation.desc=Adauga traducerea calitatilor in Engleza pe pagina de ajutor
-foxtrick.ReadHtPrefs.desc=Detecteaza automat limba
-foxtrick.ReadHtCountryCurrencyDateFormat.desc=Detecteaza automat tara, moneda si formatul datei (updatat dupa login)
+foxtrick.ReadHtPrefs.desc=Detecteaza automat limba, tara, moneda si formatul datei (updatat dupa login)
 foxtrick.OnPagePrefs.desc=Arata o mica casuta jos in stanga sau dreapta lateral care permit schimbarea modulelor FoxTrick care ar putea strica afisarea paginii
 foxtrick.CountryList.desc=Modificari pentru numele tarilor
 foxtrick.CountryList.SelectBoxes.desc=Schimba numele tarilor din Engleza in numele originale
@@ -354,9 +344,6 @@ foxtrick.LeagueAndMatchChat.OpenYapletFrame.desc=Deschide chatul Yaplet in inter
 foxtrick.LeagueAndMatchChat.OpenGabblyPopup.desc=Deschide chatul Gabbly in fereastra noua
 foxtrick.LeagueAndMatchChat.ChatNick.desc=Alege numele utilizator pentru chat
 foxtrick.RapidId.desc=O casuta in susul paginii pentru a vedea echipa, jucatorul, etc dupa ID
-foxtrick.ReadHtPrefsFromHeader.desc=Modifica setarile automat pentru FoxTrick
-foxtrick.ReadHtPrefsFromHeader.Language.desc=Setarea limbii
-foxtrick.ReadHtPrefsFromHeader.CountryCurrencyDateFormat.desc=Setare tara, data si moneda
 foxtrick.YouthSeriesEstimation.desc=In momentul cautarii, estimeaza momentul startului ligii de juniori care sunt in pauza competitionala
 foxtrick.LocalTime.desc=Arata optional ora locala in locul orei HT.Clickuind pe ceas se schimba intre cele doua optiuni.
 foxtrick.LocalTime.DefaultLocal.desc=Arata ora locala ca implicita
@@ -364,6 +351,7 @@ foxtrick.ForumThreadAutoIgnore.desc=Ignora automat topicurile cand selectezi tag
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista tag-uri, exemple: NT, idee, Bug.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista alba a topicurilor dupa ID. Topicurile din lista alba nu vor fi ignorate.
 foxtrick.TableSort.desc=Fac toate tabelele sortabile daca au antet. (inclusiv tabelele de pe forum)
+foxtrick.LiveAlert.desc=Alerteaza golurile din HT Live
 -----------------------------------------------------------------------------
 
 
@@ -442,6 +430,8 @@ foxtrick.GoToPostBox.label=Mergi!
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Click pe butonul 'Salveaza' pe pagina urmatoare pentru a parasi acest forum.
 leave_conf_button=Paraseste forumul
+
+forum.preferences=Forum Preferences
 
 # ForumTemplates
 make_template_from_post=Creeaza un sablon din post
@@ -908,10 +898,9 @@ foxtrick.prefs.labelSavePrefs=Exporta preferinte
 foxtrick.prefs.labelSavePrefs_Notes=Exporta setari personale (notari, sabloane & linkuri personalizate)
 foxtrick.prefs.labelLoadPrefs=Importa preferinte (Setarile curente pot fi modificate. Necesita restart)
 foxtrick.prefs.captionDisableSettings=Dezactiveaza FoxTrick
-foxtrick.prefs.captionFoxtrickFirstRun=FoxTrick MyHT
-foxtrick.prefs.labelFoxtrickFirstRun=Selecteaza versiunea de la care vrei sa vezi din nou in MyHT ce s-a modificat
 foxtrick.prefs.stagepref=Dezactiveaza pe serverul Stage
 foxtrick.prefs.disableTemporaryLabel=Dezactiveaza temporar
+foxtrick.prefs.saved=Preferinte salvate.
 
 foxtrick.prefs.buttonSave=Salveaza
 foxtrick.prefs.buttonCancel=Anuleaza
@@ -922,6 +911,12 @@ foxtrick.prefs.buttonDisableAll=Dezactiveaza toate
 foxtrick.prefs.buttonSavePrefs=Salveaza
 foxtrick.prefs.buttonLoadPrefs=Incarca
 foxtrick.prefs.activeCurrencyConverter=Convertor monede(valuta) activat
+
+about.headDevelopers=Developeri proiect
+about.projectOwners=Owneri proiect
+about.developers=Developeri
+about.translators=Translatori
+about.designers=Designeri
 
 delete_foxtrick_branches_ask=Esti sigur ca vrei sa restaurezi setarile implicite?\nFirefox trebuie restartat pentru a avea efect.
 disable_all_foxtrick_modules_ask=Esti sigur ca vrei sa dezactivezi toate modulele?\n
