'Remove UOL toollbar' option in FixCSSProblems module for Brasilian users + activating FoxTrick on domain(hattrick.uol.com.br)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5534 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -194,6 +194,7 @@ foxtrick.FixcssProblems.MatchOrder_Lineheight.desc=Коригује пробле
 foxtrick.FixcssProblems.RTL_Fixes.desc=Коригује неке ХТ грешке за језике који се пишу са десна на лево.
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Додаје кориговани скрол бар страницама форума. Подрхтавање слике је мање него само са укљученом Хеттрик опцијом.
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Повећава величину фонта за ХТ формат 'small_font'.
+foxtrick.FixcssProblems.BrasilToollbarFix.desc=Уклони 'UOL' траку алата (за кориснике из Бразила)
 foxtrick.SimplePresentation.desc=Додатне опције за изглед.
 foxtrick.SimplePresentation.League_Table.desc=Додаје вертикалне линије у табели лиге ради боље прегледности.
 foxtrick.SimplePresentation.Guestbook.desc=Побољшава читљивост порука у књизи гостију (уоквирује поруке сивом подлогом).
