--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -759,6 +759,7 @@ LastLineup=Последња постава
 YouthMatches=Омладински мечеви
 more=више...
 less=мање...
+TeamPopupLinks.prefsCaption=Подешавање линкова
 
 total_stars=Укупан број звездица
 
