--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -290,7 +290,7 @@ foxtrick.RapidId.desc=Lisää kätevä syötelaatikko sivun yläpuolelle katsell
 foxtrick.YouthSeriesEstimation.desc=Tuloshaun taulussa, arvioi sarjatauolla olevien juniorisarjojen otteluiden aloitusajan.
 foxtrick.LocalTime.desc=Näytä valinnainen paikallinen aika HT-ajan sijaan. Voit vaihtaa aikaa näiden kahden valinnan välillä klikkaamalla kelloa.
 foxtrick.LocalTime.DefaultLocal.desc=Näytä paikallinen aika oletuksena
-foxtrick.ForumThreadAutoIgnore.desc=Ignore automaattiset foorumi topicit valituilla tageilla (topics with [Tag] or {Tag}).
+foxtrick.ForumThreadAutoIgnore.desc=Ignoroi automaattisesti foorumitopicit valituilla tageilla (topics with [Tag] or {Tag}).
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista tageista, eg: NT, idea, Bug. Pilkku eristetty, case insensitive.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by IDs (the part before the dot). Threads in whitelist will not be ignored. Comma separated.
 foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (including tables in forum postings)
@@ -313,7 +313,7 @@ foxtrick.ExtraShortcuts.ftprefs=FoxTrick-asetukset
 foxtrick.HistoryStats.season=Kausi
 foxtrick.HistoryStats.season.short=K
 foxtrick.HistoryStats.cup=Cup kierros
-foxtrick.HistoryStats.cup.short=C
+foxtrick.HistoryStats.cup.short=Cup
 foxtrick.HistoryStats.league=Sarja
 foxtrick.HistoryStats.league.short=Sarja
 foxtrick.HistoryStats.pos=Sijoitus sarjassa
@@ -470,7 +470,7 @@ Set_pieces=Erikoistilanteet
 Set_pieces.abbr=ET
 
 PlayerCategory=Pelaaja kategoria
-PlayerCategory.abbr=Kt
+PlayerCategory.abbr=Pkt
 categories.GK=MV
 categories.WB=LP
 categories.CD=KP
@@ -504,9 +504,9 @@ Experience=Kokemus
 Experience.abbr=Kok
 
 Stamina=Kestävyys
-Stamina.abbr=Ke
+Stamina.abbr=Kes
 Form=Kunto
-Form.abbr=Ku
+Form.abbr=Kun
 
 Status=Status
 Status.abbr=Status
@@ -540,8 +540,8 @@ TransferListed.abbr=SL
 NrOfMatches=Otteluiden määrä
 NrOfMatches.abbr=OM
 LeagueGoals=Sarjamaalit
-LeagueGoals.abbr=Sm
-CupGoals=Cup maalit
+LeagueGoals.abbr=SM
+CupGoals=Cup-maalit
 CupGoals.abbr=CM
 FriendliesGoals=Ystävyysottelumaalit
 FriendliesGoals.abbr=YOM
@@ -593,7 +593,7 @@ foxtrick.linkscustom.addtag=Lisää tagi
 foxtrick.linkscustom.tags=Tagit
 foxtrick.linkscustom.help=Apua
 foxtrick.linkscustom.helptext=Ensinnäkin, tämä on vain muokkausmoodi. Klikkaamalla tämän laatikon otsikkoa (Linkit), voit vaihtaa moodia muokkaamisen ja normaalin välillä. Vain normaalissa moodissa sinun linkkisi ovat täysin toimivia. Ulkoiset staattiset linkit on helppo lisätä, sinun tarvitsee lisätä vain täydellinen url (Esimerkki: http: \/\/alltid.org\/league\/427\/) . Sisäisiä staattisia linkkejä varten, sivuuta palvelin-osa (Esimerkki: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). Tagit joita vain tarvitset harvinaisempia dynaamisia linkkejä varten. Tageilla linkit ovat dynaamisesti vaihtuneet käyttämällä tietoja niiltä sivuilta joissa olet. Esimerkiksi http:\/\/alltid.org\/league\/[leagueid] johtaisi sinut aina alltid-sivulle, sarjasta jota tutkailet Hattrickissä. Tagit mitkä ovat saatavilla joka sivulla, on listattu valikkolaatikossa. Voit käyttää vain niitä tageja jotka on listattu siihen sivulle, johon olet lisäämässä oman käytännönlinkkisi. Teksti mikä on tehty, on vain näyte tallennus. Voit kirjoittaa tagit itse (näillä []).
-foxtrick.linkscustom.helptext2=Voit myös viedä linkkejäsi ja jaella niitä. Tehdäksesi tämän, klikkaa vie nappia ja valitset kansion jonne tallennat linkin. Linkit on lisätty siihen tiedostoon, joten voit tallentaa lukuisia linkkejä yhteen kansioon. Tuodaksesi linkkejä, avaa foxtrick asetukset ja mene importti eli tuonti asetuksiin. Ainoastaan asetukset näyttää mitkä valitussa tiedostossa tullaan tuomaan, jotka ovat sinun linkkejä tässä tapauksessa. Yhtäkään edellisistä linkeistäsi ei tulla poistamaan.
+foxtrick.linkscustom.helptext2=Voit myös viedä linkkejäsi ja jaella niitä. Tehdäksesi tämän, klikkaa vie nappia ja valitset kansion jonne tallennat linkin. Linkit on lisätty siihen tiedostoon, joten voit tallentaa lukuisia linkkejä yhteen kansioon. Tuodaksesi linkkejä, avaa foxtrick asetukset ja mene importti eli tuontiasetuksiin. Ainoastaan asetukset näyttää mitkä valitussa tiedostossa tullaan tuomaan, jotka ovat sinun linkkejäsi tässä tapauksessa. Yhtäkään edellisistä linkeistäsi ei tulla poistamaan.
 foxtrick.matches.income=Ansiot:
 foxtrick.newmailtoyou=Sinulle on uusia viestejä
 foxtrick.newforumtoyou=Sinulle on uusia foorumiviestejä
@@ -604,12 +604,12 @@ foxtrick.tweaks.BirthdayNextWeek=Viikon sisällä
 foxtrick.copymatchid=Klikkaa kopioidaksesi otteluIDn leikepöytään
 foxtrick.ExtendedPlayerDetails.perseason=/vuosi
 
-foxtrick.defensiveTrainer=%s Valmentaja, joka on kiinnostunut puolustavasta pelitavasta.
-foxtrick.offensiveTrainer=%s Valmentaja, joka on kiintynyt hyökkäävään pelityyliin.
-foxtrick.balancedTrainer=%s Valmentaja, joka ei ole hyökkäys eikä puolustus-mielinen.
+foxtrick.defensiveTrainer=%s valmentaja, joka on kiinnostunut puolustavasta pelitavasta
+foxtrick.offensiveTrainer=%s valmentaja, joka on kiintynyt hyökkäävään pelityyliin
+foxtrick.balancedTrainer=%s valmentaja, joka ei ole hyökkäys- eikä puolustusmielinen
 
 foxtrick.onpagepreferences=FoxTrick OnPagePrefs
-foxtrick.modules_allpages=Moduulit jotka toimii kaikilla sivuilla
+foxtrick.modules_allpages=Kaikki moduulit
 HTLanguageChanged=Olet asettanut Foxtrick-kielen automaattisen mukautumisen Foxtrickin pääasetuksissa. Paikallinen Foxtrick-kielesi on nyt: %s.
 NewOrChangedModules=Seuraavat moduulit ovat joko uusia tai niissä on muutoksia lähtien versiosta
 Screenshot=Kommentoitu kuvankaappaus moduulin ominaisuuksista
@@ -786,10 +786,10 @@ Deadline=Määräaika
 Deadline.abbr=Määräaika
 CurrentBid=Nykyinen tarjous
 CurrentBid.abbr=Tarjous
-CurrentBidder=Nykyinen korkein tarjous
-CurrentBidder.abbr=Tarjoaja
-CurrentBidderShort=Nykyinen korkein tarjous
-CurrentBidderShort.abbr=Tr
+CurrentBidder=Korkein nykyinen tarjous
+CurrentBidder.abbr=Ostaja
+CurrentBidderShort=Korkein nykyinen tarjous
+CurrentBidderShort.abbr=Kt
 
 Senior=Edustus
 Youth=Juniori
@@ -811,22 +811,22 @@ foxtrick.RapidId.ViewById=Katso ID:llä
 foxtrick.SkillTable.Switch_view_title=Vaihda taulukon näkymää
 
 # External Chat
-foxtrick.LeagueAndMatchChat.MatchChat=Non HT Ottelu Chat
-foxtrick.LeagueAndMatchChat.LeagueChat=Non HT Sarja Chat
-foxtrick.LeagueAndMatchChat.CupChat=Non HT Cup Chat
-foxtrick.LeagueAndMatchChat.FederationChat=Non HT Federaatio Chat
+foxtrick.LeagueAndMatchChat.MatchChat=Non-HT Ottelu Chat
+foxtrick.LeagueAndMatchChat.LeagueChat=Non-HT Sarja Chat
+foxtrick.LeagueAndMatchChat.CupChat=Non-HT Cup Chat
+foxtrick.LeagueAndMatchChat.FederationChat=Non-HT Federaatio Chat
 
 #htms
 foxtrick.htmsStatistics.prediction=Arvioitu tulos
 foxtrick.htmsStatistics.windrawloss=voitto/tasapeli/häviö
 foxtrick.htmsStatistics.linkcaption=Match Analysis by HTMS
-foxtrick.htmsStatistics.changePrediction=Vaihda arvio
+foxtrick.htmsStatistics.changePrediction=Muuta arvio
 
 #actions
 Copy=Kopioi
 View=Katso
 Switch_view=Vaihda näkymää
-Filter=Suodin
+Filter=Suodatin
 
 # buttons
 button.ok=OK
@@ -855,12 +855,12 @@ foxtrick.prefs.AlertTab=Hälytys
 foxtrick.prefs.AboutTab=Lisätietoa
 foxtrick.prefs.ChangesTab=Muutokset
 foxtrick.prefs.HelpTab=Apua
-foxtrick.prefs.links=Kysymys-foorumit ja apusivut
-foxtrick.prefs.portal=Foxtrick portaali
-foxtrick.prefs.external_forum=Foxtrick foorumi
-foxtrick.prefs.hattrick_forum=Foxtrick foorumi (Hattrickissä)
+foxtrick.prefs.links=Kysymysfoorumit ja apusivut
+foxtrick.prefs.portal=Foxtrick-portaali
+foxtrick.prefs.external_forum=Foxtrick-foorumi
+foxtrick.prefs.hattrick_forum=Foxtrick-foorumi (Hattrick)
 foxtrick.prefs.commented_screenshots=Kommentoidut kuvankaappaukset
-foxtrick.prefs.hex_color_editor=Heksaväri muokkaaja
+foxtrick.prefs.hex_color_editor=Heksaväri-muokkaaja
 foxtrick.prefs.PrefDefaultWarningLabel=Esiasetusten varoitus
 foxtrick.prefs.PrefDefaultWarningText=Tarkistithan kieli ja valuutta -asetukset? Jotkin Foxtrickin ominaisuuksista ei toimi, jos kyseisiä asetuksia ei olla asetettu täsmällisesti.
 foxtrick.prefs.basicPreferences=Perusasetukset
@@ -904,7 +904,7 @@ about.translators=Kääntäjät
 about.designers=Muotoilijat
 
 delete_foxtrick_branches_ask=Oletko varma, että haluat palauttaa oletusasetukset?\nFirefox täytyy uudelleenkäynnistää tämän aikaan saamiseksi!
-disable_all_foxtrick_modules_ask=Oletko varma että haluat hylätä kaikki moduulit?\n
+disable_all_foxtrick_modules_ask=Oletko varma, että haluat kytkeä kaikki moduulit pois päältä?\n
 
 #status bar menu
 foxtrick.prefs.preferences=Asetukset
@@ -912,7 +912,7 @@ foxtrick.menu.configurefoxtrick=Foxtrickin asetukset
 foxtrick.menu.reloadfoxtrick=Uudelleenlataa Foxtrick (kehittäjille)
 
 foxtrick.prefs.AdditionalOptions=Lisäasetukset
-foxtrick.prefs.smallcopyicons=Näytä pienet kopiointi-ikonit otsakkeessa sen sijaan että kopiointi-ikonit olisi erillisessä sivuboxissa
+foxtrick.prefs.smallcopyicons=Näytä pienet kopiointi-ikonit otsakkeissa sen sijaan että kopiointi-ikonit olisi erillisessä sivuboxissa
 foxtrick.prefs.DisplayHTMLDebugOutput=Näytä valinnainen testaus ulostulo Hattrick -sivun alatunnisteessa (kehittäjille)
 
 ###EOF
