Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5582 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -894,6 +894,7 @@ foxtrick.prefs.labelFoxtrickFirstRun=Одаберите верзију за ко
 foxtrick.prefs.stagepref=Искључи Фокстрик на Стејџ серверу
 foxtrick.prefs.disableTemporaryLabel=Привремено искључи Фокстрик
 foxtrick.prefs.saved=Подешавања су сачувана!
+foxtrick.prefs.moduleLink=(линк)
 
 foxtrick.prefs.buttonSave=Сачувај
 foxtrick.prefs.buttonCancel=Одустани
